--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ subjects:
 - !lcsh 'Iraq -- Antiquities'
 - !lcc 'DS'
 - !lcc 'N'
+- GITenberg
 title: 'Mesopotamian Archaeology
 
   An introduction to the archaeology of Mesopotamia and Assyria'
